fix(css): items now use stretch

--- a/materials/public/css/scss/components/_card.scss
+++ b/materials/public/css/scss/components/_card.scss
@@ -7,12 +7,8 @@
     align-items: center;
     border: $clr-dark 1px solid;
     border-radius: $border-radius-lg;
-    background-color: $clr-focus;
+    background-color: $clr-light;
     cursor: pointer;
-
-    &:not(:first-child) {
-        margin-top: 1rem;
-    }
 
     &__header * {
         overflow: hidden;
@@ -28,17 +24,26 @@
     }
 
     &__thumbnail {
-        flex-grow: 1;
-        flex-shrink: 1;
-        object-fit: cover;
+        img {
+            width: 100%;
+            height: auto;
+            object-fit: cover;
+            object-position: center center;
+        }
+        // flex-grow: 1;
+        // flex-shrink: 1;
+        background-color: $clr-focus;
+        // height: 100%;
+        // // sizing
         max-width: 20%;
-        aspect-ratio: 1 / 1;
-        @media screen and (max-width: $xs) {
-            max-width: 30%;
-        }
-        @media screen and (max-width: $xs-l) {
-            max-width: 100%;
-        }
+        height: 100%;
+        min-height: 100%;
+        // @media screen and (max-width: $xs) {
+        //     max-width: 30%;
+        // }
+        // @media screen and (max-width: $xs-l) {
+        //     max-width: 100%;
+        // }
     }
 
     &__body {
@@ -46,7 +51,6 @@
         flex-grow: 9999;
         text-align: left;
         padding: 1rem;
-        background-color: $clr-light;
     }
 
     &__content {
