--- a/materials/public/css/scss/components/_item.scss
+++ b/materials/public/css/scss/components/_item.scss
@@ -1,14 +1,9 @@
 @import '../defaults/variables';
 
 .item {
-    margin-bottom: 1rem;
     border: $clr-dark 1px solid;
     border-radius: $border-radius-lg;
     padding: 0.5rem;
-
-    &--stretch {
-        flex-grow: 1;
-    }
 
     & &__header {
         display: flex;
